@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displaychannel SYSTEM "../../../dtd/displaychannel.dtd">
 
-<displaychannel x="0" y="0" width="100%" height="100%" fadetime="{menuFadetime}">
+<displaychannel x="0" y="0" width="100%" height="100%" fadetime="{00_menuFadetime}" shifttime="{01_ShifttimeChannelDisplay}" shifttype="bottom" shiftmode="slowed">
 	<background>
 		<area x="0" y="75%" width="100%" height="25%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannel"/>
