@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displayvolume SYSTEM "../../../dtd/displayvolume.dtd">
 
-<displayvolume x="0" y="93%" width="100%" height="7%" fadetime="{menuFadetime}">
+<displayvolume x="0" y="93%" width="100%" height="7%" fadetime="{00_menuFadetime}">
 	<background>
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientReplayControl"/>
